tests/spec/non_conformant/errors/invalid_operation/lte.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/invalid-operation/lte.hrx"



// Ignoring "test", error tests are not supported yet.
